--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
     <script src="js/app.js"></script>
 
   </head>
-  <body ng-app="app">
+  <body ng-app="app" ng-controller="MainCtrl">
 
     <ion-nav-view></ion-nav-view>
 
@@ -30,7 +30,7 @@
               <form>
                   <ion-list>
                       <label class="item item-input">
-                          <span class="input-label">Usuário</span>
+                          <span class="input-label">Usuário  </span>
                           <input id="usuario" name="usuario" type="text" placeholder="">
                       </label>
                       <label class="item item-input">
@@ -204,24 +204,14 @@
 
         <ion-content padding="true" class="has-header">
           <div class="list">
-            <a class="item item-thumbnail-left" href="#">
-              <img  src="#" >
-              <h2>Jobim</h2>
-              <p>Rua Serra do Mel, 8008<br>
-              (84) 9999-9999</p>
-            </a>
-            <a class="item item-thumbnail-left" href="#">
-              <img  src="#" >
-              <h2>Casa do Whisky</h2>
-              <p>Rua pássaro de fogo, 8858<br>
-              (84) 8888-8888</p>
-            </a>
-            <a class="item item-thumbnail-left" href="#">
-              <img  src="#" >
-              <h2>Whiskritorio</h2>
-              <p>Avenida Ruy Barbosa, 4008<br>
-              (84) 7777-7777</p>
-            </a>
+            <div ng-repeat="module in array">
+             <a class="item item-thumbnail-left" href="#">
+                <img src="#">
+                <h2>{{ module.name }}</h2>
+                <p>{{ module.city }} - {{ module.street }}, {{ module.number }}<br>
+                (84) {{ module.phone }}</p>
+              </a>
+            </div>
           </div>
         </ion-content>
       </ion-view>
