--- a/www/index.html
+++ b/www/index.html
@@ -24,9 +24,11 @@
       <ion-view title="Papudinho">
           <ion-nav-bar class="bar-positive"></ion-nav-bar> 
           <ion-content padding="true" class="has-header">
-              <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; background-color: rgb(255, 255, 255);">
-                  <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+              <div style="border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; background-color: rgb(255, 255, 255);">
+                  <img src='img/Papudim.jpg' width="150px" style="vertical-align: middle;">
+                <!-- <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i> -->
               </div>
+
               <form ng-submit="submit()" ng-controller="LoginForm">
                   <ion-list>
                       <label class="item item-input">
@@ -174,9 +176,6 @@
           <ion-nav-buttons side="left">
             <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
           </ion-nav-buttons>
-          <ion-nav-buttons side="right">
-            <a href="#/addBar" class="button button-icon icon ion-plus"></a>
-          </ion-nav-buttons>
         </ion-nav-bar>
 
         <ion-content padding="true" class="has-header">
@@ -249,7 +248,7 @@
     </script>
 
     <script id="addCartao" type="text/ng-template">
-      <ion-view view-title="Novo Cartão" ng-controller="NovoCartao">
+      <ion-view view-title="Novo Cartão">
 
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
@@ -265,77 +264,77 @@
         </ion-nav-bar>
 
         <ion-content padding="true" class="has-header">
-          <div class="row">
-            <div class="col">
-              <label class="item item-input item-select">
-                <div class="input-label">
-                  Bebida
-                </div>
-                <select >
-                  <option selected> -- Escolha -- </option>
-                  <option align="center" ng-repeat="module in Bebidas">{{module.name}} </option>
-                </select>
-              </label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col col-90"> 
-              <label class="item item-input item-select">
-                <div class="input-label">
-                  Bar
-                </div>
-                <select>
-                  <option selected> -- Escolha -- </option>
-                  <option align="center" ng-repeat="module in Bares">{{module.name}} </option>
-                </select>
-              </label>
-            </div>
-            <div class="col col-center" align="center"> 
-              <a href="#/addBar"><i class="icon ion-plus" style="font-size: 20px; color: #387ef5"></i></a>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col col-80">
-              <label class="item item-input">
-                <span class="input-label">Data de Vencimento</span>
-                <input type="date">
-              </label>
-            </div>
-
-            <div class="col col-center" align="center">
-                <label class="toggle toggle-positive">
-                  <input type="checkbox">
-                  <div class="track">
-                    <div class="handle"></div>
+          <form ng-submit="submitcartao()" ng-controller="NovoCartao">
+            <div class="row">
+              <div class="col">
+                <label class="item item-input item-select">
+                  <div class="input-label">
+                    Bebida
                   </div>
+                  <select ng-model="bebida">
+                    <option selected > -- Escolha -- </option>
+                    <option align="center"  ng-repeat="module in Bebidas" >{{module.name}} </option>
+                  </select>
                 </label>
-            </div>
-
-          </div>
-
-          <div class="row">
-            <div class="col col-80">
-              <div class="item range range-positive">
-                <input type="range" name="volume" min="0" max="20" value="1" ng-model="volume">
               </div>
             </div>
-            <div class="col col-center" align="center">
-              <p>Doses : {{volume}}</p>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="col" align="center"><i class="icon ion-image" style="font-size: 70px; color: rgb(136, 136, 136);"></i></div>
-            <div class="col" align="center"><i class="icon ion-image" style="font-size: 70px; color: rgb(136, 136, 136);"></i></div>
-          </div>
 
+            <div class="row">
+              <div class="col"> 
+                <label class="item item-input item-select">
+                  <div class="input-label">
+                    Bar
+                  </div>
+                  <select ng-model="bar">
+                    <option selected> -- Escolha -- </option>
+                    <option align="center" ng-repeat="module in Bares" >{{module.name}} </option>
+                  </select>
+                </label>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <label class="item item-input">
+                  <span class="input-label">Data de Vencimento</span>
+                  <input type="date" ng-model="vencimento">
+                </label>
+              </div>
+              <!--
+              <div class="col col-center" align="center">
+                  <label class="toggle toggle-positive">
+                    <input type="checkbox">
+                    <div class="track">
+                      <div class="handle"></div>
+                    </div>
+                  </label>
+              </div>
+                -->
+            </div>
+
+            <div class="row">
+              <div class="col col-80">
+                <div class="item range range-positive">
+                  <input type="range" name="volume" min="0" max="20" value="1" ng-model="volume">
+                </div>
+              </div>
+              <div class="col col-center" align="center">
+                <p>Doses : {{volume}}</p>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class="col" align="center"><i class="icon ion-image" style="font-size: 70px; color: rgb(136, 136, 136);"></i></div>
+              <div class="col" align="center"><i class="icon ion-image" style="font-size: 70px; color: rgb(136, 136, 136);"></i></div>
+            </div>
+            <input type="submit" id="SalvarCartao" value="Salvar" class="button button-stable button-block" />
+          </form>
         </ion-content>
       </ion-view>
     </script>
 
 
-    <script id="addBar" type="text/ng-template" ng-controller="MapCtrl">
+    <script id="addBar" type="text/ng-template" >
       
       <ion-view view-title="Novo Bar">
 
@@ -384,25 +383,25 @@
               <i class="ion-ios7-arrow-back"></i> Voltar
             </button>
           </ion-nav-buttons>
-          <ion-nav-buttons side="right">
-            <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-              Salvar <i class="ion-checkmark-round"></i> 
-            </button>
-          </ion-nav-buttons>
         </ion-nav-bar>
 
         <ion-content padding="true" class="has-header">
-          <form>
+          <form ng-submit="submitamigo()" ng-controller="addAmigo">
             <ion-list>
                 <label class="item item-input">
                     <span class="input-label">Nome</span>
-                    <input type="text" placeholder="">
+                    <input type="text" placeholder="" ng-model="name">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Email</span>
+                    <input type="text" placeholder="" ng-model="email">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Telefone</span>
-                    <input type="text" placeholder="">
+                    <input type="text" placeholder="" ng-model="phone">
                 </label>
             </ion-list>
+            <input type="submit" id="SalvarAmigo" value="Salvar" class="button button-stable button-block" />
           </form>
         </ion-content>
       </ion-view>
