--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Papudinho</title>
 
-    <link href="lib/ionic/css/myStyle.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
-
+    
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>    
     <script src="js/app.js"></script>
@@ -59,7 +57,7 @@
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
             <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-            <i class="ion-ios7-arrow-back"></i> Voltar
+            <i class="ion-chevron-left"></i> Voltar
           </button>
           </ion-nav-buttons>
         </ion-nav-bar>
@@ -99,7 +97,7 @@
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
             <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-            <i class="ion-ios7-arrow-back"></i>
+            <i class="ion-chevron-left"></i> Voltar
           </button>
           </ion-nav-buttons>
         </ion-nav-bar>
@@ -320,7 +318,7 @@
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
             <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-            <i class="ion-ios7-arrow-back"></i> Voltar
+            <i class="ion-chevron-left"></i> Voltar
           </button>
           </ion-nav-buttons>
         </ion-nav-bar>
@@ -402,7 +400,7 @@
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
             <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-              <i class="ion-ios7-arrow-back"></i> Voltar
+              <i class="ion-chevron-left"></i> Voltar
             </button>
           </ion-nav-buttons>
         </ion-nav-bar>
@@ -436,7 +434,7 @@
         <ion-nav-bar class="bar-positive">
           <ion-nav-buttons side="left">
             <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack($event)">
-            <i class="ion-ios7-arrow-back"></i> Voltar
+            <i class="ion-chevron-left"></i> Voltar
           </button>
           </ion-nav-buttons>
         </ion-nav-bar>
