--- a/www/index.html
+++ b/www/index.html
@@ -270,7 +270,7 @@
                 <h2>{{module.bar_name}}</h2>
                 <h3>{{module.title}}</h3>
                 <p>{{module.description}}<br>
-                  Válido até {{module.date}}</p>
+                  Válido até {{module.date.replace("-", "/").replace("-", "/")}}</p>
               </div>
             </div>
           </ion-content>
