Correção do design do menu "Meus Dados"

--- a/www/index.html
+++ b/www/index.html
@@ -286,11 +286,11 @@
                   <div align="center" class="msg" id="msgdados ">{{msg}}</div>
                   <label class="item item-input">
                       <span class="input-label">Nome</span>
-                      <input type="text" placeholder=""  ng-model="nome" readonly>
+                      <span>{{nome}}</span>
                   </label>
                   <label class="item item-input">
                       <span class="input-label">Email</span>
-                      <input type="text" placeholder=""  ng-model="email" readonly>
+                      <span>{{email}}</span>
                   </label>
                   <label class="item item-input">
                       <span class="input-label">Senha Antiga</span>
